# AP-Email

./: .env.example  .gitignore  AGENTS.md  EMAIL_PROCESSING_FLOW.md  databricks.yml  deploy-azure-apps-nonprod.ps1  deploy-azure-apps-prod.ps1  deploy-azure-nonprod.ps1  deploy-azure-postgres-nonprod.ps1  deploy-azure-postgres-prod.ps1  deploy-azure-prod.ps1  dump.sql  function_app.py  launch-dashboard-api.ps1  launch-local-dashboard.ps1  launch-react-app.ps1  pyproject.toml  requirements-postgres.txt  requirements.txt  run-local-test-emails.ps1  staticwebapp.config.json
app/: AGENTS.md  __init__.py
db/: 20260617_allow_word_attachments.sql  20260617_route_separate_backup_to_multi_pdf_merge.sql  AGENTS.md  README.md  SCHEMA.md  add-appointment-informational-no-action.sql  add-asset-custom-lookup.sql  add-contractor-timesheet-escalation.sql  add-credit-memo-escalation.sql  add-zero-dollar-invoice-escalation.sql  azure-permissions.sql  import-reference-workbook.ps1  remove-alc-routing-policy.sql  remove-multifamily-escalation-policy.sql  resolve-property-routes.sql  schema.sql  seed.sql  update-current-reply-no-action-any-sender.sql  update-current-reply-no-action.sql
infra/: README.md  main.bicep  main.json  main.parameters.example.json  main.parameters.nonprod.json  main.parameters.prod.json
reference/: AGENTS.md  AP_Email_Outcomes_Run_1.xlsx  AP_Email_Outcomes_Run_2.xlsx  AP_Inbox_Automation_Design_Requirements.docx  AP_Inbox_Automation_Properties_Team_v4.pptx  Dashboard_example.html  Medius Routing Revised.xlsx  Medius Routing.xlsx  Properties_Addresses_Schema.xlsx
(+290 files in other folders)
