[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-automation"
version = "0.1.0"
description = "Local-first AP automation processing pipeline."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
ap-automation = "ap_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
