[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-automation"
version = "0.1.0"
description = "Local-first AP automation processing pipeline."
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24",
  "azure-ai-documentintelligence>=1.0.0",
  "azure-core>=1.30.0",
  "azure-functions>=1.20.0",
  "azure-identity>=1.17.0",
  "azure-storage-blob>=12.20.0",
  "msal>=1.28.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "python-docx>=1.1.0",
  "olefile>=0.47",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
ap-automation = "ap_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
